WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58204
REGRESSION(
r83397
): Most GTK media controls are hidden when no valid source is specified
https://bugs.webkit.org/show_bug.cgi?id=58204
Summary
REGRESSION(r83397): Most GTK media controls are hidden when no valid source i...
Dimitri Glazkov (Google)
Reported
2011-04-10 09:34:10 PDT
http://build.webkit.org/results/GTK%20Linux%2032-bit%20Release/r83398%20(12578)/media/video-empty-source-pretty-diff.html
Fixing...
Attachments
Patch
(1.62 KB, patch)
2011-04-10 14:59 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-04-10 14:59:49 PDT
Created
attachment 88959
[details]
Patch
Eric Carlson
Comment 2
2011-04-10 15:19:31 PDT
I would r+ this, but I think it would be good to get buy-off from one of the GTK developers because it changes their <video> controller UI.
Philippe Normand
Comment 3
2011-04-11 05:28:24 PDT
Sorry I rebaselined the tests involved in this issue :( See
http://trac.webkit.org/changeset/83431
I tested that patch locally and reverted my rebaseline (locally too). It seems that anyway the tests would need a rebaseline: --- /tmp/layout-test-results/media/video-no-audio-expected.txt 2011-04-11 14:27:13.000000000 +0200 +++ /tmp/layout-test-results/media/video-no-audio-actual.txt 2011-04-11 14:27:13.000000000 +0200 @@ -15,14 +15,15 @@ layer at (8,43) size 352x288 scrollHeight 298 RenderFlexibleBox (positioned) {DIV} at (0,0) size 352x288 RenderButton {INPUT} at (0,268) size 20x20 - RenderFlexibleBox {DIV} at (20,268) size 272x20 [border: (1px solid #FFFFFF33) none (1px solid #FFFFFF33)] + RenderFlexibleBox {DIV} at (20,268) size 252x20 [border: (1px solid #FFFFFF33) none (1px solid #FFFFFF33)] RenderBlock (anonymous) at (1,0) size 65x30 RenderFlexibleBox {DIV} at (0,0) size 65x30 RenderBlock (anonymous) at (5,5) size 55x20 RenderText {#text} at (0,0) size 55x12 text run at (0,0) width 55: "00:00 / 00:09" - RenderSlider {INPUT} at (66,0) size 205x20 + RenderSlider {INPUT} at (66,0) size 185x20 RenderBlock {DIV} at (2,4) size 12x12 + RenderButton {INPUT} at (272,268) size 20x20 RenderButton {INPUT} at (292,268) size 20x20 RenderButton {INPUT} at (312,268) size 20x20 RenderButton {INPUT} at (332,268) size 20x20
Martin Robinson
Comment 4
2011-04-11 08:51:11 PDT
Comment on
attachment 88959
[details]
Patch Looks fine to me.
WebKit Commit Bot
Comment 5
2011-04-11 09:32:56 PDT
Comment on
attachment 88959
[details]
Patch Clearing flags on attachment: 88959 Committed
r83445
: <
http://trac.webkit.org/changeset/83445
>
WebKit Commit Bot
Comment 6
2011-04-11 09:33:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug