2011-04-11  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Martin Robinson.

        REGRESSION(r83397): Most GTK media controls are hidden when no valid source is specified
        https://bugs.webkit.org/show_bug.cgi?id=58204

        Covered by existing tests.

        * platform/gtk/RenderThemeGtk.h:
        (WebCore::RenderThemeGtk::hasOwnDisabledStateHandlingFor): Let GTK handle
            the the state of media controls.

Canonical link: https://commits.webkit.org/73217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83445 268f45cc-cd09-0410-ab3c-d52691b4dbfc