Source/WebCore/platform/gtk/RenderThemeGtk.h
@@ -147,6 +147,7 @@ protected:
     void initMediaColors();
     void initMediaButtons();
     void adjustMediaSliderThumbSize(RenderObject*) const;
+    virtual bool hasOwnDisabledStateHandlingFor(ControlPart) const { return true; }
     virtual bool paintMediaFullscreenButton(RenderObject*, const PaintInfo&, const IntRect&);
     virtual bool paintMediaPlayButton(RenderObject*, const PaintInfo&, const IntRect&);
     virtual bool paintMediaMuteButton(RenderObject*, const PaintInfo&, const IntRect&);
